@startuml

class msgs{
        joystick_input
        input_signals
        control_signals
        model_states
        model_wrenches
        air_data
        aero_wrenches
        prop_wrenches
}

class services{
    airdata_srv
    apply_wrench_srv
    get_control_signals_srv
    get_model_states_srv
}
    
namespace Ros{

    
    class Master{
        model
        Master()
        ~Master()
        gazebo_clk_clb()
    }

    class Model{
        model_states
        airdata
        control_signals
        model_wrenches
        aerodynamics
        propulsion
        Model()
        ' ~Model()
        modelStep()
        getStates()
        getControlSignals()
        getAirdata()
        calcWrenches()
        applyWrenches()
        simulationStep()
    }

    class Aerodynamics{
        aero_wrenches
        *model
        Aerodynamics(Model *)
        ' ~Aerodynamics()
        initParam()
        calcWrench()
        calcAdditionalData()
        calcForces()
        calcTorques()
    }

    class Propulsion{
        prop_wrenches
        *model
        Propulsion(Model *)
        ' ~Propulsion()
        initParam()
        calcWrench()
        calcAdditionalData()
        calcThrust()
        calcTorque()
    }

    class Dynamics{
        *model
        *aerodynamics
        * propulsion
        Dynamics(Model *)
        calcAero()
        calcProp()
    }

    class Factory{
        buildAerodynamics();
        buildPropulsion();
    }
    class Environment{
        airdata
        Environment()
        ~Environment()
        calcAirdata()
    }
    class Controller_mediator{
        model_states
        sensor_data
        control_signals
        Controller(Model *)
        ' ~Controller()
        getControllerSignals()
        sendControlSignals()
    }

    class Controller{
        model_states
        control_input_signals
        control_output_signals
        Controller() 
        getJoystickSignals()
        getModelStates()
        makeControllerStep()
        calcOutputs()
        publishOutputs()
    }
}



namespace Gazebo{
    class world_plugin{
        world
        ' camera_view()
        giveStep()
    }
    
    class model_plugin{
        model_states
        returnStates()
        applyWrenchesOnModel()
    }

    class sensor_plugin{
        model_states
        sensor_data
        pubSensorData()
    }
}


Ros.Master --> Ros.Model
Ros.Controller_mediator --> Ros.Model : control_signals_flag (topic)
Ros.Propulsion --> Ros.Dynamics
Ros.Dynamics --> Ros.Model
Ros.Environment <-> Ros.Model : pose -airdata (srv)
Ros.Aerodynamics --> Ros.Dynamics
Gazebo.model_plugin <-- Ros.Model : wrenches    (srv)
Ros.Model <- Gazebo.model_plugin : model_states (srv)
Ros.Controller <- Gazebo.sensor_plugin :sensor_data (topic)
Ros.Model -> Gazebo.world_plugin : step (srv)
Ros.Model <-- Ros.Controller_mediator : control_signals (srv)
Gazebo.world_plugin --> Ros.Master : clock (topic)
Ros.Controller_mediator <-- Ros.Controller :control_signals (topic)
Ros.Controller <- Gazebo.model_plugin :model_states (topic)
Gazebo.world_plugin .. Gazebo.model_plugin
Gazebo.model_plugin .. Gazebo.sensor_plugin
Ros.Joystick -> Ros.Controller
Ros.Factory <-> Ros.Propulsion
Ros.Aerodynamics <-> Ros.Factory
@enduml
